Some changes in email em social networks.

--- a/original.html
+++ b/original.html
@@ -235,8 +235,9 @@
 						<span id="footer_contact"> Contato</span>
 						</div>
 						<p>
-							<a href="mailto:ola@falreis.eng.br">ola@falreis.eng.br</a><br />
-							<a href="tel:5531997136818">+55-31-99713-6818 <i class="icon icon-whatsapp"></i></a>
+							<a href="mailto:ola@falreis.eng.br"><i class="icon icon-mail"></i> falreis@gmail.com </a><br />
+							<a href="tel:5531997136818"><i class="icon icon-phone"></i> +55-31-99713-6818 <i class="icon icon-whatsapp"></i></a><br/>
+							<a href="skype:falreis?call"><i class="icon icon-skype"></i> falreis</a>
 						</p>
 					</div>
 					<div class="clearfix visible-sm-block"></div>
@@ -245,10 +246,10 @@
 						<span id="footer_follow"> Siga</span>
 						</div>
 						<p>
-							<a target="_blank" href="skype:falreis?call"><i class="icon icon-skype"></i> falreis</a><br />
-							<a target="_blank" href="http://facebook.com/falreis.eng"><i class="icon icon-facebook2"></i> falreis.eng</a><br />
 							<a target="_blank" href="http://linkedin.com/in/falreis"><i class="icon icon-linkedin"></i> falreis</a><br />
-							<a target="_blank" href="https://github.com/falreis"><i class="icon icon-github"></i> falreis</a>
+							<a target="_blank" href="https://github.com/falreis"><i class="icon icon-github"></i> falreis</a><br />
+							<a target="_blank" href="https://twitter.com/falreis"><i class="icon icon-twitter"></i> falreis</a><br />
+							<a target="_blank" href="http://facebook.com/falreis.eng"><i class="icon icon-facebook2"></i> falreis.eng</a><br />
 						</p>
 					</div>
 					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s">
