--- a/original.html
+++ b/original.html
@@ -87,6 +87,7 @@
 					<div class="col-md-10 col-md-offset-1 text-center">
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s" id="opt_bio"></h2>
 						<p id="about_content"></p>
+						<p id="about_content2"></p>
 					</div>
 				</div>
 				<div style="height:30px; color:#000;"></div>
@@ -292,6 +293,7 @@
 
 					$("#opt_bio").text(myObj["about-title"]);
 					$("#about_content").text(myObj["about-content"]);
+					$("#about_content2").text(myObj["about-content2"]);
 					$("#about_prof_title").text(myObj["about-prof-title"]);
 					$("#about_prof_content").text(myObj["about-prof-content"]);
 					$("#about_lattes_title").text(myObj["about-lattes-title"]);
