Commit new page version

--- a/original.html
+++ b/original.html
@@ -86,8 +86,10 @@
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 text-center">
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s" id="opt_bio"></h2>
-						<p id="about_content"></p>
-						<p id="about_content2"></p>
+						<p>
+							<span id="about_content"></span><br />
+							<span id="about_content2"></span>
+						</p>
 					</div>
 				</div>
 				<div style="height:30px; color:#000;"></div>
@@ -255,7 +257,7 @@
 					</div>
 					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s">
 						<div class="fh5co-logo"><span class="logo"> &#182;</span> Felipe Reis</div>
-						<p id="footer_about">Engenheiro de Computação e técnico em Informática Industrial pelo CEFET-MG. Pós-granduando em Engenharia de Produção pela PUC-MG.</p>
+						<p id="footer_about"></p>
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 				</div>
@@ -264,7 +266,7 @@
 	</div>
 
 	<!-- jQuery -->
-	<script src="js/jquery.min.js" async onload="startIt()"></script>
+	<script src="js/jquery.min.js" async old_onload="startIt()"></script>
 	<!-- Bootstrap -->
 	<script src="js/bootstrap.min.js" async></script>
 	<!-- WOW -->
