--- a/original.html
+++ b/original.html
@@ -266,7 +266,7 @@
 	</div>
 
 	<!-- jQuery -->
-	<script src="js/jquery.min.js" async old_onload="startIt()"></script>
+	<script src="js/jquery.min.js" async onload="startIt()"></script>
 	<!-- Bootstrap -->
 	<script src="js/bootstrap.min.js" async></script>
 	<!-- WOW -->
