--- a/original.html
+++ b/original.html
@@ -73,7 +73,7 @@
 								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="color:rgb(20, 105, 20)" id="title"></h1>
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="color:#4C7D5D;">
 									<span id="subtitle1"></span><br> 
-									<span id="subtitle2"></span>
+									<span id="subtitle2" style="font-size:90%;"></span>
 								</h2>
 							</div>
 						</div>
