--- a/original.html
+++ b/original.html
@@ -45,6 +45,10 @@
 			width: 20%%;
 			height: 50px;
 		}
+
+		.about-content1, .about-content2, .about-content3{
+			text-align: left;
+		}
 	</style>
 		
 	<script>
@@ -75,6 +79,11 @@
 									<span id="subtitle1"></span><br> 
 									<span id="subtitle2" style="font-size:90%;"></span>
 								</h2>
+								<span class="scroll-btn wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s"></span>
+									<a href="#" id="menu_seta">
+										<div class="fh5co-icon"><i class="icon-arrow-down22"></i></div>
+									</a>
+								</span>
 							</div>
 						</div>
 					</div>
@@ -87,33 +96,40 @@
 					<div class="col-md-10 col-md-offset-1 text-center">
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s" id="opt_bio"></h2>
 						<p>
-							<span id="about_content"></span><br />
-							<span id="about_content2"></span>
+							<div id="about_content1"></div>
+							<div id="about_content2"></div>
+							<div id="about_content3"></div>
 						</p>
 					</div>
 				</div>
 				<div style="height:30px; color:#000;"></div>
 				<div class="row" style="margin:0 7%;">
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
+					<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
 						<div class="fh5co-icon"><i class="icon-user"></i></div>
 						<div class="fh5co-desc">
 							<h3 id="about_prof_title"></h3>
 							<p><a href="http://br.linkedin.com/in/falreis" target="_blank" id="about_prof_content"></a></p>
 						</div>	
 					</div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
+					<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
 						<div class="fh5co-icon"><i class="icon-pencil2"></i></div>
 						<div class="fh5co-desc">
 							<h3 id="about_lattes_title"></h3>
 							<p><a href="http://lattes.cnpq.br/5024640469355836" target="_blank" id="about_lattes_content"></a></p>
 						</div>	
 					</div>
-					<div class="clearfix visible-sm-block visible-xs-block"></div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
+					<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
 						<div class="fh5co-icon"><i class="icon-file"></i></div>
 						<div class="fh5co-desc">
 							<h3 id="about_papers_title"></h3>
 							<p><a href="http://falreis.eng.br/papers" target="_blank" id="about_papers_content"></a></p>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
+						<div class="fh5co-icon"><i class="icon-github"></i></div>
+						<div class="fh5co-desc">
+							<h3 id="about_github_title"></h3>
+							<p><a href="http://github.com/falreis" target="_blank" id="about_github_content"></a></p>
 						</div>
 					</div>
 					<div class="clearfix visible-sm-block visible-xs-block"></div>
@@ -294,14 +310,17 @@
 					$("#subtitle2").text(myObj["subtitle2"]);
 
 					$("#opt_bio").text(myObj["about-title"]);
-					$("#about_content").text(myObj["about-content"]);
+					$("#about_content1").text(myObj["about-content1"]);
 					$("#about_content2").text(myObj["about-content2"]);
+					$("#about_content3").text(myObj["about-content3"]);
 					$("#about_prof_title").text(myObj["about-prof-title"]);
 					$("#about_prof_content").text(myObj["about-prof-content"]);
 					$("#about_lattes_title").text(myObj["about-lattes-title"]);
 					$("#about_lattes_content").text(myObj["about-lattes-content"]);
 					$("#about_papers_title").text(myObj["about-papers-title"]);
 					$("#about_papers_content").text(myObj["about-papers-content"]);
+					$("#about_github_title").text(myObj["about-github-title"]);
+					$("#about_github_content").text(myObj["about-github-content"]);
 
 					$("#opt_cons").text(myObj["services-title"]);
 					$("#services_web_title").text(myObj["services-web-title"]);
