--- a/original.html
+++ b/original.html
@@ -46,8 +46,9 @@
 			height: 50px;
 		}
 
-		.about-content1, .about-content2, .about-content3{
+		#about-content1, #about-content2, #about-content3{
 			text-align: left;
+			margin-top: 5px;
 		}
 	</style>
 		
@@ -64,11 +65,11 @@
 	<body style="background: linear-gradient(#FFF,rgba(88, 202, 126, 0.4));">
 	<div id="fh5co-page">
 		<div class="fh5co-cover fh5co-cover-style-2 js-full-height" data-stellar-background-ratio="0.5" data-next="yes" style="border-bottom:#EEE solid 1px;">
-		  	<span class="scroll-btn wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s">
+		  	<!--<span class="scroll-btn wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s">
 				<a href="#" id="menu_seta">
 					<div class="fh5co-icon"><i class="icon-arrow-down22"></i></div>
 				</a>
-			</span>
+			</span>-->
 			<div class="fh5co-cover-text">
 				<div class="container">
 					<div class="row">
@@ -78,12 +79,10 @@
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="color:#4C7D5D;">
 									<span id="subtitle1"></span><br> 
 									<span id="subtitle2" style="font-size:90%;"></span>
-								</h2>
-								<span class="scroll-btn wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s"></span>
-									<a href="#" id="menu_seta">
+									<a href="#opt_bio" id="menu_seta">
 										<div class="fh5co-icon"><i class="icon-arrow-down22"></i></div>
 									</a>
-								</span>
+								</h2>
 							</div>
 						</div>
 					</div>
