--- a/original.html
+++ b/original.html
@@ -46,7 +46,7 @@
 			height: 50px;
 		}
 
-		#about-content1, #about-content2, #about-content3{
+		.about-content{
 			text-align: left;
 			margin-top: 5px;
 		}
@@ -78,10 +78,11 @@
 								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="color:rgb(20, 105, 20)" id="title"></h1>
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="color:#4C7D5D;">
 									<span id="subtitle1"></span><br> 
-									<span id="subtitle2" style="font-size:90%;"></span>
-									<a href="#opt_bio" id="menu_seta">
-										<div class="fh5co-icon"><i class="icon-arrow-down22"></i></div>
-									</a>
+									<span id="subtitle2" style="font-size:90%;">
+											<a href="#opt_bio" id="menu_seta">
+												<div class="fh5co-icon"><i class="icon-arrow-down22"></i></div>
+											</a>
+									</span>
 								</h2>
 							</div>
 						</div>
@@ -95,9 +96,9 @@
 					<div class="col-md-10 col-md-offset-1 text-center">
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s" id="opt_bio"></h2>
 						<p>
-							<div id="about_content1"></div>
-							<div id="about_content2"></div>
-							<div id="about_content3"></div>
+							<div id="about_content1" class="about-content"></div>
+							<div id="about_content2" class="about-content"></div>
+							<div id="about_content3" class="about-content"></div>
 						</p>
 					</div>
 				</div>
