--- a/original.html
+++ b/original.html
@@ -65,11 +65,6 @@
 	<body style="background: linear-gradient(#FFF,rgba(88, 202, 126, 0.4));">
 	<div id="fh5co-page">
 		<div class="fh5co-cover fh5co-cover-style-2 js-full-height" data-stellar-background-ratio="0.5" data-next="yes" style="border-bottom:#EEE solid 1px;">
-		  	<!--<span class="scroll-btn wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s">
-				<a href="#" id="menu_seta">
-					<div class="fh5co-icon"><i class="icon-arrow-down22"></i></div>
-				</a>
-			</span>-->
 			<div class="fh5co-cover-text">
 				<div class="container">
 					<div class="row">
@@ -78,11 +73,7 @@
 								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="color:rgb(20, 105, 20)" id="title"></h1>
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="color:#4C7D5D;">
 									<span id="subtitle1"></span><br> 
-									<span id="subtitle2" style="font-size:90%;">
-											<a href="#opt_bio" id="menu_seta">
-												<div class="fh5co-icon"><i class="icon-arrow-down22"></i></div>
-											</a>
-									</span>
+									<span id="subtitle2" style="font-size:90%;"></span>
 								</h2>
 							</div>
 						</div>
