Text and little layout changes

--- a/original.html
+++ b/original.html
@@ -73,21 +73,20 @@
 	<div id="fh5co-page">
 		<nav class="fh5co-nav-style-1" role="navigation" data-offcanvass-position="fh5co-offcanvass-left">
 			<div class="container">
-				<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 fh5co-logo">
-					<a href="#" class="js-fh5co-mobile-toggle fh5co-nav-toggle"><i></i></a>
+				<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 text-right fh5co-logo">
 					<a href="index.html" style="background-color:#4C7D5D; color:#FFF; padding: 10px 15px;">fr</a>
 				</div>
-				<div class="col-lg-3 col-md-3 col-sm-3 text-center fh5co-link-wrap">
+				<div class="col-lg-4 col-md-4 col-sm-4 text-center fh5co-link-wrap">
 					<ul data-offcanvass="yes"></ul>
 					<div class="icon-social">
-						<a target="_blank" href="http://linkedin.com/in/falreis"><i class="icon icon-linkedin"></i></a>
-						<a target="_blank" href="https://github.com/falreis"><i class="icon icon-github"></i></a>
-						<a target="_blank" href="https://twitter.com/falreis"><i class="icon icon-twitter"></i></a>
-						<a target="_blank" href="http://facebook.com/falreis.eng"><i class="icon icon-facebook2"></i></a>
-						<a href="skype:falreis?call"><i class="icon icon-skype"></i></a>
+						<a target="_blank" href="http://linkedin.com/in/falreis"><i class="icon icon-linkedin">&nbsp;</i></a>
+						<a target="_blank" href="https://github.com/falreis"><i class="icon icon-github">&nbsp;</i></a>
+						<a target="_blank" href="https://twitter.com/falreis"><i class="icon icon-twitter">&nbsp;</i></a>
+						<a target="_blank" href="http://facebook.com/falreis.eng"><i class="icon icon-facebook2">&nbsp;</i></a>
+						<a href="skype:falreis?call"><i class="icon icon-skype">&nbsp;</i></a>
 					</div>
 				</div> 
-				<div class="col-lg-8 col-md-8 col-sm-8 text-right fh5co-link-wrap">
+				<div class="col-lg-7 col-md-7 col-sm-7 text-right fh5co-link-wrap">
 					<ul class="fh5co-special" data-offcanvass="yes">
 						<li><a id="menu_bio" href="#opt_bio"></a></li>
 						<li><a id="menu_cons" href="#opt_cons"></a></li>
