--- a/original.html
+++ b/original.html
@@ -69,7 +69,7 @@
 		ga('send', 'pageview');
 	</script>
 	</head>
-	<body style="background:gold;">
+	<body style="background:#e2f9e9;">
 	<div id="fh5co-page">
 		<nav class="fh5co-nav-style-1" role="navigation" data-offcanvass-position="fh5co-offcanvass-left">
 			<div class="container">
