--- a/original.html
+++ b/original.html
@@ -69,12 +69,12 @@
 		ga('send', 'pageview');
 	</script>
 	</head>
-	<body style="background:#e2f9e9;">
+	<body style="background: url('images/background.jpg') no-repeat top; background-size:100%;">
 	<div id="fh5co-page">
 		<nav class="fh5co-nav-style-1" role="navigation" data-offcanvass-position="fh5co-offcanvass-left">
 			<div class="container">
 				<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 text-right fh5co-logo">
-					<a href="index.html" style="background-color:#4C7D5D; color:#FFF; padding: 10px 15px;">fr</a>
+					<a href="index.html" style="background-color:#0293d2; color:#FFF; padding: 10px 15px;">fr</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-4 text-center fh5co-link-wrap">
 					<ul data-offcanvass="yes"></ul>
@@ -106,10 +106,10 @@
 					<div class="row">
 						<div class="col-md-push-6 col-md-6 full-height js-full-height">
 							<div class="fh5co-cover-intro" style="height: 800px">
-								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="color:rgb(20, 105, 20)" id="title"></h1>
-								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="color:#4C7D5D;">
+								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="color:#FFF;" id="title"></h1>
+								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="color:#FFF;">
 									<span id="subtitle1"></span><br> 
-									<span id="subtitle2" style="font-size:90%;"></span>
+									<!--<span id="subtitle2" style="font-size:90%;"></span>-->
 								</h2>
 							</div>
 						</div>
@@ -329,7 +329,7 @@
 					document.title = myObj.title;
 					$("#title").text(myObj["title"]);
 					$("#subtitle1").text(myObj["subtitle1"]);
-					$("#subtitle2").text(myObj["subtitle2"]);
+					//$("#subtitle2").text(myObj["subtitle2"]);
 
 					$("#menu_bio").text(myObj["about-title"]);
 					$("#menu_cons").text(myObj["services-title"]);
