Some changes in layout

--- a/original.html
+++ b/original.html
@@ -64,7 +64,9 @@
 		<nav class="fh5co-nav-style-1" role="navigation" data-offcanvass-position="fh5co-offcanvass-left">
 			<div class="container">
 				<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 text-right fh5co-logo">
-					<a href="index.html" style="background-color:#1fa53d; color:#FFF; padding: 10px 15px;">fr</a>
+					<a href="index.html" style="padding: 10px 15px;">
+						<img src="favicon.png" style="width: 70px;" />
+					</a>
 				</div>
 				<div class="col-lg-11 col-md-7 col-sm-7 text-right fh5co-link-wrap">
 					<ul class="fh5co-special" data-offcanvass="yes">
@@ -86,7 +88,6 @@
 								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="color:#000;" id="title"></h1>
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="color:#000;">
 									<span id="subtitle1"></span><br> 
-									<!--<span id="subtitle2" style="font-size:90%;"></span>-->
 								</h2>
 							</div>
 						</div>
@@ -137,17 +138,17 @@
 				<div class="row">
 					<div class="fh5co-features">
 						<div class="fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
-							<center><div class="icon"><i class=" icon-monitor"></i></div></center>
+							<center><div class="icon"><i class=" icon-home"></i></div></center>
 							<h3 id="services_civ_title1"></h3>
 							<p id="services_civ_content1"></p>
 						</div>
 						<div class="fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
-							<center><div class="icon"><i class="icon-line-graph"></i></div></center>
+							<center><div class="icon"><i class="icon-wrench"></i></div></center>
 							<h3 id="services_civ_title2"></h3>
 							<p id="services_civ_content2"></p>
 						</div>
 						<div class="fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s" style="border: 0px #FFF;">
-							<center><div class="icon"><i class="icon-cloud"></i></div></center>
+							<center><div class="icon"><i class="icon-clipboard"></i></div></center>
 							<h3 id="services_civ_title3"></h3>
 							<p id="services_civ_content3"></p>
 						</div>
