--- a/original.html
+++ b/original.html
@@ -8,10 +8,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Cache-control" content="public">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
+	<title>Olá, eu sou Felipe Reis</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Felipe Augusto Lima Reis - Engenheiro de Comuputação. Desenvolvedor de softwares eficientes e funcionais." />
-	<meta name="keywords" content="falreis, desenvolvedor, software, developer, consultoria em TI" />
+	<meta name="description" content="Felipe A. L. Reis - Engenheiro de Computação." />
+	<meta name="keywords" content="falreis, felipe reis, desenvolvedor, software developer, IT, TI" />
 	<meta name="author" content="falreis" />
 
  	<!-- Facebook and Twitter integration -->
@@ -108,7 +108,10 @@
 							<div class="fh5co-cover-intro" style="height: 800px">
 								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="color:#FFF;" id="title"></h1>
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="color:#FFF;">
-									<span id="subtitle1"></span><br> 
+									<span id="subtitle1">
+										Desenvolvedor freelancer. Engenheiro de Computação, com especialização em Engenharia de Produção e Engenharia de Carro Autônomo. Mestrando em Informática. Desenvolvedor full stack desde 2006.
+									</span>
+									<br> 
 									<!--<span id="subtitle2" style="font-size:90%;"></span>-->
 								</h2>
 							</div>
