--- a/original.html
+++ b/original.html
@@ -113,7 +113,6 @@
 										Desenvolvedor freelancer. Engenheiro de Computação, com especialização em Engenharia de Produção e Engenharia de Carro Autônomo. Mestrando em Informática. Desenvolvedor full stack desde 2006.
 									</span>
 									<br> 
-									<!--<span id="subtitle2" style="font-size:90%;"></span>-->
 								</h2>
 							</div>
 						</div>
@@ -126,11 +125,25 @@
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 text-center">
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s" id="opt_bio"></h2>
-						<p>
-							<div id="about_content1" class="about-content"></div>
-							<div id="about_content2" class="about-content"></div>
-							<div id="about_content3" class="about-content"></div>
-						</p>
+						<!-- <div style="display:table">
+							<span style="display:table-cell; vertical-align: middle;"><img src="images/falreis_linkedin_branco.png" style="max-height: 300px;max-width: 300px;border-radius: 50%;" /></span>
+							<span style="display:table-cell; vertical-align: middle;">
+								<div id="about_content1" class="about-content"></div>
+								<div id="about_content2" class="about-content"></div>
+							</span> 
+						</div> -->
+						<div class="col-md-3 col-sm-12 col-xs-12 col-xxs-12">
+							<span style="display:table-cell; vertical-align: middle;">
+								<img src="images/falreis_linkedin_branco.png" style="max-height: 250px;max-width: 250px;border-radius: 50%;" />
+							</span>
+						</div>
+						<div class="col-md-9 col-sm-12 col-xs-12 col-xxs-12">
+								<span style="display:table-cell; vertical-align: middle;">
+									<div id="about_content1" class="about-content"></div>
+									<div id="about_content2" class="about-content"></div>
+								</span> 
+						</div>
+						<div class="col-md-12 col-sm-12 col-xs-12 col-xxs-12" id="about_content3" class="about-content" style="text-align: left;"></div>
 					</div>
 				</div>
 				<div style="height:30px; color:#000;"></div>
@@ -142,8 +155,14 @@
 							<p><a href="http://br.linkedin.com/in/falreis" target="_blank" id="about_prof_content"></a></p>
 						</div>	
 					</div>
-					<!--
 					<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
+						<div class="fh5co-icon"><i class="icon-file"></i></div>
+						<div class="fh5co-desc">
+							<h3 id="about_curr_title"></h3>
+							<p><a href="http://falreis.eng.br/falreis/papers" target="_blank" id="about_curr_content"></a></p>
+						</div>
+					</div>
+					<!-- <div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
 						<div class="fh5co-icon"><i class="icon-pencil2"></i></div>
 						<div class="fh5co-desc">
 							<h3 id="about_lattes_title"></h3>
@@ -153,8 +172,8 @@
 					<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
 						<div class="fh5co-icon"><i class="icon-file"></i></div>
 						<div class="fh5co-desc">
-							<h3 id="about_papers_title"></h3>
-							<p><a href="http://falreis.eng.br/papers" target="_blank" id="about_papers_content"></a></p>
+							<h3 id="about_papers_title">Veja meus ar</h3>
+							<p><a href="http://falreis.eng.br/falreis/papers" target="_blank" id="about_papers_content"></a></p>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
@@ -163,8 +182,7 @@
 							<h3 id="about_github_title"></h3>
 							<p><a href="http://github.com/falreis" target="_blank" id="about_github_content"></a></p>
 						</div>
-					</div>
-					-->
+					</div> -->
 					<div class="clearfix visible-sm-block visible-xs-block"></div>
 				</div>
 			</div>
@@ -195,25 +213,6 @@
 							<p id="services_ti_content"></p>
 						</div>
 					</div>
-					<!--
-					<div class="fh5co-features">
-						<div class="fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
-							<center><div class="icon"><i class="icon-cloud"></i></div></center>
-							<h3 id="services_cloud_title"></h3>
-							<p id="services_cloud_content"></p>
-						</div>
-						<div class="fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
-							<center><div class="icon"><i class="icon-search"></i></div></center>
-							<h3 id="services_seo_title"></h3>
-							<p id="services_seo_content"></p>
-						</div>
-						<div class="fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
-							<center><div class="icon"><i class=" icon-cogs"></i></div></center>
-							<h3 id="services_optim_title"></h3>
-							<p id="services_optim_content"></p>
-						</div>
-					</div>
-					-->
 				</div>
 			</div>
 		</div>
@@ -283,7 +282,6 @@
 							Belo Horizonte, Brasil
 						</p>
 						<br />
-						
 					</div>
 					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">
 						<div class="fh5co-logo"><span class="logo">[ ]</span>
@@ -308,7 +306,7 @@
 						</p>
 					</div>
 					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s">
-						<div class="fh5co-logo"><span class="logo"> &#182;</span> Felipe Reis</div>
+						<div class="fh5co-logo"><span class="logo"> &#182;</span> Sobre</div>
 						<p id="footer_about"></p>
 					</div>
 					<div class="clearfix visible-sm-block"></div>
@@ -351,6 +349,8 @@
 					$("#about_content3").text(myObj["about-content3"]);
 					$("#about_prof_title").text(myObj["about-prof-title"]);
 					$("#about_prof_content").text(myObj["about-prof-content"]);
+					$("#about_curr_title").text(myObj["about-curr-title"]);
+					$("#about_curr_content").text(myObj["about-curr-content"]);
 					/*$("#about_lattes_title").text(myObj["about-lattes-title"]);
 					$("#about_lattes_content").text(myObj["about-lattes-content"]);
 					$("#about_papers_title").text(myObj["about-papers-title"]);
