--- a/original.html
+++ b/original.html
@@ -125,13 +125,6 @@
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 text-center">
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s" id="opt_bio"></h2>
-						<!-- <div style="display:table">
-							<span style="display:table-cell; vertical-align: middle;"><img src="images/falreis_linkedin_branco.png" style="max-height: 300px;max-width: 300px;border-radius: 50%;" /></span>
-							<span style="display:table-cell; vertical-align: middle;">
-								<div id="about_content1" class="about-content"></div>
-								<div id="about_content2" class="about-content"></div>
-							</span> 
-						</div> -->
 						<div class="col-md-3 col-sm-12 col-xs-12 col-xxs-12">
 							<span style="display:table-cell; vertical-align: middle;">
 								<img src="images/falreis_linkedin_branco.png" style="max-height: 250px;max-width: 250px;border-radius: 50%;" />
@@ -149,7 +142,7 @@
 				<div style="height:30px; color:#000;"></div>
 				<div class="row" style="margin:0 7%;">
 					<div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
-						<div class="fh5co-icon"><i class="icon-user"></i></div>
+						<div class="fh5co-icon"><i class="icon-linkedin"></i></div>
 						<div class="fh5co-desc">
 							<h3 id="about_prof_title"></h3>
 							<p><a href="http://br.linkedin.com/in/falreis" target="_blank" id="about_prof_content"></a></p>
@@ -159,30 +152,9 @@
 						<div class="fh5co-icon"><i class="icon-file"></i></div>
 						<div class="fh5co-desc">
 							<h3 id="about_curr_title"></h3>
-							<p><a href="http://falreis.eng.br/falreis/papers" target="_blank" id="about_curr_content"></a></p>
+							<p><a href="curriculum/pt_felipe-reis.pdf" target="_blank" id="about_curr_content"></a></p>
 						</div>
 					</div>
-					<!-- <div class="col-md-6 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
-						<div class="fh5co-icon"><i class="icon-pencil2"></i></div>
-						<div class="fh5co-desc">
-							<h3 id="about_lattes_title"></h3>
-							<p><a href="http://lattes.cnpq.br/5024640469355836" target="_blank" id="about_lattes_content"></a></p>
-						</div>	
-					</div>
-					<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
-						<div class="fh5co-icon"><i class="icon-file"></i></div>
-						<div class="fh5co-desc">
-							<h3 id="about_papers_title">Veja meus ar</h3>
-							<p><a href="http://falreis.eng.br/falreis/papers" target="_blank" id="about_papers_content"></a></p>
-						</div>
-					</div>
-					<div class="col-md-3 col-sm-6 col-xs-6 col-xxs-12 fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
-						<div class="fh5co-icon"><i class="icon-github"></i></div>
-						<div class="fh5co-desc">
-							<h3 id="about_github_title"></h3>
-							<p><a href="http://github.com/falreis" target="_blank" id="about_github_content"></a></p>
-						</div>
-					</div> -->
 					<div class="clearfix visible-sm-block visible-xs-block"></div>
 				</div>
 			</div>
@@ -207,7 +179,6 @@
 							<p id="services_mining_content"></p>
 						</div>
 						<div class="fh5co-feature wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s" style="border: 0px #FFF;">
-							<!--<center><div class="icon"><i class="icon-bag"></i></div></center>-->
 							<center><div class="icon"><i class="icon-cloud"></i></div></center>
 							<h3 id="services_ti_title"></h3>
 							<p id="services_ti_content"></p>
@@ -288,7 +259,7 @@
 						<span id="footer_contact"> Contato</span>
 						</div>
 						<p>
-							<a href="mailto:me@falreis.eng.br"><i class="icon icon-mail"></i> me@falreis.eng.br</a><br />
+							<a href="mailto:felipe@falreis.eng.br"><i class="icon icon-mail"></i> felipe@falreis.eng.br</a><br />
 							<a href="tel:5531997136818"><i class="icon icon-phone"></i> +55-31-99713-6818 <i class="icon icon-whatsapp"></i></a><br/>
 							<a href="skype:falreis?call"><i class="icon icon-skype"></i> falreis</a>
 						</p>
@@ -338,57 +309,58 @@
 					$("#subtitle1").text(myObj["subtitle1"]);
 					/*$("#subtitle2").text(myObj["subtitle2"]);*/
 
-					$("#menu_bio").text(myObj["about-title"]);
-					$("#menu_cons").text(myObj["services-title"]);
-					$("#menu_solu").text(myObj["methods-title"]);
-					$("#menu_cont").text(myObj["footer-contact"]);
+					$("#menu_bio").text(myObj["about_title"]);
+					$("#menu_cons").text(myObj["services_title"]);
+					$("#menu_solu").text(myObj["methods_title"]);
+					$("#menu_cont").text(myObj["footer_contact"]);
 
-					$("#opt_bio").text(myObj["about-title"]);
-					$("#about_content1").text(myObj["about-content1"]);
-					$("#about_content2").text(myObj["about-content2"]);
-					$("#about_content3").text(myObj["about-content3"]);
-					$("#about_prof_title").text(myObj["about-prof-title"]);
-					$("#about_prof_content").text(myObj["about-prof-content"]);
-					$("#about_curr_title").text(myObj["about-curr-title"]);
-					$("#about_curr_content").text(myObj["about-curr-content"]);
-					/*$("#about_lattes_title").text(myObj["about-lattes-title"]);
-					$("#about_lattes_content").text(myObj["about-lattes-content"]);
-					$("#about_papers_title").text(myObj["about-papers-title"]);
-					$("#about_papers_content").text(myObj["about-papers-content"]);
-					$("#about_github_title").text(myObj["about-github-title"]);
-					$("#about_github_content").text(myObj["about-github-content"]);*/
+					$("#opt_bio").text(myObj["about_title"]);
+					$("#about_content1").text(myObj["about_content1"]);
+					$("#about_content2").text(myObj["about_content2"]);
+					$("#about_content3").text(myObj["about_content3"]);
+					$("#about_prof_title").text(myObj["about_prof_title"]);
+					$("#about_prof_content").text(myObj["about_prof_content"]);
+					$("#about_curr_title").text(myObj["about_curr_title"]);
+					$("#about_curr_content").text(myObj["about_curr_content"]);
+					$("#about_curr_content").attr("href", myObj["about_curr_link"]);
+					/*$("#about_lattes_title").text(myObj["about_lattes_title"]);
+					$("#about_lattes_content").text(myObj["about_lattes_content"]);
+					$("#about_papers_title").text(myObj["about_papers_title"]);
+					$("#about_papers_content").text(myObj["about_papers_content"]);
+					$("#about_github_title").text(myObj["about_github_title"]);
+					$("#about_github_content").text(myObj["about_github_content"]);*/
 
-					$("#opt_cons").text(myObj["services-title"]);
-					$("#services_web_title").text(myObj["services-web-title"]);
-					$("#services_web_content").text(myObj["services-web-content"]);
-					$("#services_ti_title").text(myObj["services-ti-title"]);
-					$("#services_ti_content").text(myObj["services-ti-content"]);
-					/*$("#services_seo_title").text(myObj["services-seo-title"]);
-					$("#services_seo_content").text(myObj["services-seo-content"]);
-					$("#services_optim_title").text(myObj["services-optim-title"]);
-					$("#services_optim_content").text(myObj["services-optim-content"]);
-					$("#services_cloud_title").text(myObj["services-cloud-title"]);
-					$("#services_cloud_content").text(myObj["services-cloud-content"]);*/
-					$("#services_mining_title").text(myObj["services-mining-title"]);
-					$("#services_mining_content").text(myObj["services-mining-content"]);
+					$("#opt_cons").text(myObj["services_title"]);
+					$("#services_web_title").text(myObj["services_web_title"]);
+					$("#services_web_content").text(myObj["services_web_content"]);
+					$("#services_ti_title").text(myObj["services_ti_title"]);
+					$("#services_ti_content").text(myObj["services_ti_content"]);
+					/*$("#services_seo_title").text(myObj["services_seo_title"]);
+					$("#services_seo_content").text(myObj["services_seo_content"]);
+					$("#services_optim_title").text(myObj["services_optim_title"]);
+					$("#services_optim_content").text(myObj["services_optim_content"]);
+					$("#services_cloud_title").text(myObj["services_cloud_title"]);
+					$("#services_cloud_content").text(myObj["services_cloud_content"]);*/
+					$("#services_mining_title").text(myObj["services_mining_title"]);
+					$("#services_mining_content").text(myObj["services_mining_content"]);
 					
-					$("#opt_solu").text(myObj["methods-title"]);
-					$("#methods_os_title").text(myObj["methods-os-title"]);
-					$("#methods_os_content").text(myObj["methods-os-content"]);
-					$("#methods_light_title").text(myObj["methods-light-title"]);
-					$("#methods_light_content").text(myObj["methods-light-content"]);
-					$("#methods_agile_title").text(myObj["methods-agile-title"]);
-					$("#methods_agile_content").text(myObj["methods-agile-content"]);
-					$("#methods_dry_title").text(myObj["methods-dry-title"]);
-					$("#methods_dry_content").text(myObj["methods-dry-content"]);
-					$("#methods_continuous_title").text(myObj["methods-continuous-title"]);
-					$("#methods_continuous_content").text(myObj["methods-continuous-content"]);
-					$("#methods_love_title").text(myObj["methods-love-title"]);
-					$("#methods_love_content").text(myObj["methods-love-content"]);
+					$("#opt_solu").text(myObj["methods_title"]);
+					$("#methods_os_title").text(myObj["methods_os_title"]);
+					$("#methods_os_content").text(myObj["methods_os_content"]);
+					$("#methods_light_title").text(myObj["methods_light_title"]);
+					$("#methods_light_content").text(myObj["methods_light_content"]);
+					$("#methods_agile_title").text(myObj["methods_agile_title"]);
+					$("#methods_agile_content").text(myObj["methods_agile_content"]);
+					$("#methods_dry_title").text(myObj["methods_dry_title"]);
+					$("#methods_dry_content").text(myObj["methods_dry_content"]);
+					$("#methods_continuous_title").text(myObj["methods_continuous_title"]);
+					$("#methods_continuous_content").text(myObj["methods_continuous_content"]);
+					$("#methods_love_title").text(myObj["methods_love_title"]);
+					$("#methods_love_content").text(myObj["methods_love_content"]);
 
-					$("#footer_contact").text(myObj["footer-contact"]);
-					$("#footer_follow").text(myObj["footer-follow"]);
-					$("#footer_about").text(myObj["footer-about"]);
+					$("#footer_contact").text(myObj["footer_contact"]);
+					$("#footer_follow").text(myObj["footer_follow"]);
+					$("#footer_about").text(myObj["footer_about"]);
 				}
 			};
 
