Atualização de site pessoal

--- a/original.html
+++ b/original.html
@@ -110,7 +110,7 @@
 								<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s" style="color:#FFF;" id="title"></h1>
 								<h2 class="cover-text-sublead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s" style="color:#FFF;">
 									<span id="subtitle1">
-										Desenvolvedor freelancer. Engenheiro de Computação, com especialização em Engenharia de Produção e Engenharia de Carro Autônomo. Mestrando em Informática. Desenvolvedor full stack desde 2006.
+										Engenheiro de Computação. Mestre em Informática. Especialista em Engenharia de Produção e Engenharia de Carro Autônomo. Desenvolvedor full stack desde 2006.
 									</span>
 									<br> 
 								</h2>
@@ -249,7 +249,7 @@
 					<div class="col-md-3 col-sm-6 fh5co-footer-widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
 						<div class="fh5co-logo"><span class="logo">{ }</span> falreis</div>
 						<p class="fh5co-copyright">
-							&copy; 2018 falreis. <br>
+							&copy; 2020 falreis. <br>
 							Belo Horizonte, Brasil
 						</p>
 						<br />
@@ -259,7 +259,7 @@
 						<span id="footer_contact"> Contato</span>
 						</div>
 						<p>
-							<a href="mailto:felipe@falreis.eng.br"><i class="icon icon-mail"></i> felipe@falreis.eng.br</a><br />
+							<a href="mailto:falreis@gmail.com"><i class="icon icon-mail"></i> falreis@gmail.com</a><br />
 							<a href="tel:5531997136818"><i class="icon icon-phone"></i> +55-31-99713-6818 <i class="icon icon-whatsapp"></i></a><br/>
 							<a href="skype:falreis?call"><i class="icon icon-skype"></i> falreis</a>
 						</p>
